test/parsing/vass/wrong-unended-string-2.good
wrong-unended-string-2.chpl:2: EOF in string
wrong-unended-string-2.chpl:2: syntax error
