test/parsing/vass/wrong-unended-string-2.chpl

writeln('Unended single-quoted string